--- a/FIASUpdate/App.config
+++ b/FIASUpdate/App.config
@@ -2,11 +2,7 @@
 <configuration>
     <configSections>
     </configSections>
-    <connectionStrings>
-        <add name="FIASUpdate.Properties.Settings.DBString" connectionString="Data Source=RYBAKOVAV;Initial Catalog=FIAS_GAR;Integrated Security=true" />
-        <add name="FIASUpdate.Properties.Settings.DB2014" connectionString="Data Source=partserver2014;Initial Catalog=FIAS_GAR;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-    </connectionStrings>
+    <connectionStrings />
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
