--- a/FIASUpdate/packages.config
+++ b/FIASUpdate/packages.config
@@ -1,35 +1,48 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Azure.Core" version="1.6.0" targetFramework="net472" />
-  <package id="Azure.Identity" version="1.3.0" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net472" />
-  <package id="Microsoft.Data.SqlClient" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Data.SqlClient.SNI" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Identity.Client" version="4.22.0" targetFramework="net472" />
-  <package id="Microsoft.Identity.Client.Extensions.Msal" version="2.16.5" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.8.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Logging" version="6.8.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Protocols" version="6.8.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.8.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Tokens" version="6.8.0" targetFramework="net472" />
-  <package id="Microsoft.SqlServer.Assessment" version="1.0.305" targetFramework="net472" />
-  <package id="Microsoft.SqlServer.Assessment.Authoring" version="1.0.282" targetFramework="net472" />
+  <package id="Azure.Core" version="1.22.0" targetFramework="net472" />
+  <package id="Azure.Identity" version="1.5.0" targetFramework="net472" />
+  <package id="DataConnectionDialog" version="1.2" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Data.ConnectionUI" version="17.1.32210.191" targetFramework="net472" />
+  <package id="Microsoft.Data.SqlClient" version="4.1.0" targetFramework="net472" />
+  <package id="Microsoft.Data.SqlClient.SNI" version="4.0.0" targetFramework="net472" />
+  <package id="Microsoft.Identity.Client" version="4.41.0" targetFramework="net472" />
+  <package id="Microsoft.Identity.Client.Extensions.Msal" version="2.19.5" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.16.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.16.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols" version="6.16.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.16.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.16.0" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Assessment" version="1.1.0" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Assessment.Authoring" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.SqlServer.SqlManagementObjects" version="161.46521.71" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net472" />
+  <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.4" targetFramework="net472" />
+  <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.4" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
-  <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.6.0" targetFramework="net472" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="6.8.0" targetFramework="net472" />
+  <package id="System.Configuration.ConfigurationManager" version="6.0.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.16.0" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Memory.Data" version="6.0.0" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net472" />
-  <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net472" />
-  <package id="System.Security.Cryptography.ProtectedData" version="4.5.0" targetFramework="net472" />
-  <package id="System.Security.Permissions" version="4.7.0" targetFramework="net472" />
-  <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net472" />
-  <package id="System.Text.Encodings.Web" version="4.7.2" targetFramework="net472" />
-  <package id="System.Text.Json" version="4.6.0" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.ProtectedData" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
+  <package id="System.Security.Permissions" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="6.0.2" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
-  <package id="Virenbar.JANL" version="1.4.0" targetFramework="net472" />
+  <package id="Virenbar.JANL" version="1.4.1" targetFramework="net472" />
 </packages>
