--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,6 @@
 ﻿site_name: Документация FIAS_GAR
 site_description: "Проект БД ФИАС ГАР для SQL Server и приложение для её обновления"
+site_url: https://virenbar.ru/FIAS_GAR/
 copyright: Copyright &copy; 2022 Virenbar
 theme:
   logo: assets/images/logo.png
