--- a/FIAS.Search/FIAS.Search.csproj
+++ b/FIAS.Search/FIAS.Search.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FIAS.API\FIAS.API.csproj" />
+  </ItemGroup>
+
 </Project>
