--- a/FIASUpdate/packages.config
+++ b/FIASUpdate/packages.config
@@ -1,31 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Azure.Core" version="1.22.0" targetFramework="net472" />
-  <package id="Azure.Identity" version="1.5.0" targetFramework="net472" />
+  <package id="Azure.Core" version="1.24.0" targetFramework="net472" />
+  <package id="Azure.Identity" version="1.6.0" targetFramework="net472" />
   <package id="DataConnectionDialog" version="1.2" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
-  <package id="Microsoft.Data.ConnectionUI" version="17.1.32210.191" targetFramework="net472" />
-  <package id="Microsoft.Data.SqlClient" version="4.1.0" targetFramework="net472" />
-  <package id="Microsoft.Data.SqlClient.SNI" version="4.0.0" targetFramework="net472" />
-  <package id="Microsoft.Identity.Client" version="4.42.0" targetFramework="net472" />
+  <package id="Microsoft.Data.SqlClient" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Data.SqlClient.SNI" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Identity.Client" version="4.45.0" targetFramework="net472" />
   <package id="Microsoft.Identity.Client.Extensions.Msal" version="2.19.6" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.16.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Logging" version="6.16.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Protocols" version="6.16.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.16.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Tokens" version="6.16.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="6.22.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.22.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.22.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols" version="6.21.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.21.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.22.0" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Assessment" version="1.1.5" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Assessment.Authoring" version="1.1.0" targetFramework="net472" />
-  <package id="Microsoft.SqlServer.SqlManagementObjects" version="161.47008.0" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.SqlManagementObjects" version="161.47027.0" targetFramework="net472" />
   <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.4" targetFramework="net472" />
   <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.4" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="6.0.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net472" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="6.16.0" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.22.0" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Memory.Data" version="6.0.0" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
@@ -44,5 +44,6 @@
   <package id="System.Text.Json" version="6.0.2" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
-  <package id="Virenbar.JANL" version="1.4.1" targetFramework="net472" />
+  <package id="Virenbar.JANL" version="2.1.2" targetFramework="net472" />
+  <package id="Virenbar.JANL.WinForms" version="2.1.2" targetFramework="net472" />
 </packages>
