--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "yaml.schemas": {
         "https://squidfunk.github.io/mkdocs-material/schema.json": "mkdocs.yml"
-    }
+    },
+    "cSpell.words": [
+        "КЛАДР",
+        "ФИАС",
+        "FIAS"
+    ]
 }
