--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,16 +4,16 @@ on:
     branches:
       - master
     paths:
-      - 'mkdocs.yml'
-      - 'docs/**'
+      - "mkdocs.yml"
+      - "docs/**"
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: 3.x
-      - run: pip install mkdocs-material 
+      - run: pip install mkdocs-material
       - run: mkdocs gh-deploy --force
