--- a/FIASUpdate/App.config
+++ b/FIASUpdate/App.config
@@ -12,22 +12,39 @@
 
 	<userSettings>
 		<FIASUpdate.Properties.Settings>
-			<setting name="SQLCS" serializeAs="String">
-				<value>Data Source=partserver2014;Initial Catalog=master;Integrated Security=True</value>
-			</setting>
-			<setting name="XMLPath" serializeAs="String">
-				<value>D:\Data\FIAS_GAR</value>
-			</setting>
-			<setting name="DBName" serializeAs="String">
-				<value>FIAS_GAR</value>
-			</setting>
-		</FIASUpdate.Properties.Settings>
+   <setting name="SQLCS" serializeAs="String">
+    <value>Data Source=partserver2014;Initial Catalog=master;Integrated Security=True</value>
+   </setting>
+   <setting name="XMLPath" serializeAs="String">
+    <value>D:\Data\FIAS_GAR</value>
+   </setting>
+   <setting name="DBName" serializeAs="String">
+    <value>FIAS_GAR</value>
+   </setting>
+   <setting name="SQLConnections" serializeAs="Xml">
+    <value>
+     <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+      <string>Data Source=partserver2014;Initial Catalog=master;Integrated Security=True</string>
+     </ArrayOfString>
+    </value>
+   </setting>
+   <setting name="DefaultFont" serializeAs="String">
+    <value>Segoe UI, 8.25pt</value>
+   </setting>
+   <setting name="DefaultBackColor" serializeAs="String">
+    <value>250, 250, 250</value>
+   </setting>
+   <setting name="DefaultForeColor" serializeAs="String">
+    <value>Black</value>
+   </setting>
+  </FIASUpdate.Properties.Settings>
 	</userSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.Identity.Client" publicKeyToken="0a613f4dd989e8ae" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-4.46.1.0" newVersion="4.46.1.0" />
+				<bindingRedirect oldVersion="0.0.0.0-4.49.1.0" newVersion="4.49.1.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
@@ -39,7 +56,7 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Text.Json" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-6.0.0.5" newVersion="6.0.0.5" />
+				<bindingRedirect oldVersion="0.0.0.0-7.0.0.1" newVersion="7.0.0.1" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
@@ -47,47 +64,47 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.IdentityModel.Abstractions" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-6.22.0.0" newVersion="6.22.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-6.26.0.0" newVersion="6.26.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.IdentityModel.Tokens" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-6.22.0.0" newVersion="6.22.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-6.26.0.0" newVersion="6.26.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.IdentityModel.Logging" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-6.22.0.0" newVersion="6.22.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-6.26.0.0" newVersion="6.26.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.IdentityModel.Tokens.Jwt" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-6.22.0.0" newVersion="6.22.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-6.26.0.0" newVersion="6.26.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.Bcl.AsyncInterfaces" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Memory.Data" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.Identity.Client.Extensions.Msal" publicKeyToken="0a613f4dd989e8ae" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-2.23.0.0" newVersion="2.23.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-2.25.3.0" newVersion="2.25.3.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Text.Encodings.Web" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Security.Cryptography.ProtectedData" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.IdentityModel.JsonWebTokens" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-6.22.0.0" newVersion="6.22.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-6.26.0.0" newVersion="6.26.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.Data.SqlClient" publicKeyToken="23ec7fc2d6eaa4a5" culture="neutral" />
@@ -95,19 +112,19 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Azure.Core" publicKeyToken="92742159e12e44c8" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-1.25.0.0" newVersion="1.25.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-1.27.0.0" newVersion="1.27.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Azure.Identity" publicKeyToken="92742159e12e44c8" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-1.6.1.0" newVersion="1.6.1.0" />
+				<bindingRedirect oldVersion="0.0.0.0-1.8.1.0" newVersion="1.8.1.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.IdentityModel.Protocols.OpenIdConnect" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-6.22.0.0" newVersion="6.22.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-6.26.0.0" newVersion="6.26.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.IdentityModel.Protocols" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-6.22.0.0" newVersion="6.22.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-6.26.0.0" newVersion="6.26.0.0" />
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
