--- a/FIASUpdate/packages.config
+++ b/FIASUpdate/packages.config
@@ -4,8 +4,8 @@
   <package id="Azure.Identity" version="1.8.2" targetFramework="net472" />
   <package id="DataConnectionDialog" version="1.2" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net472" />
-  <package id="Microsoft.Data.SqlClient" version="5.1.0" targetFramework="net472" />
-  <package id="Microsoft.Data.SqlClient.SNI" version="5.1.0" targetFramework="net472" />
+  <package id="Microsoft.Data.SqlClient" version="5.0.1" allowedVersions="(,5.0.1]" targetFramework="net472" />
+  <package id="Microsoft.Data.SqlClient.SNI" version="5.0.1" allowedVersions="(,5.0.1]" targetFramework="net472" />
   <package id="Microsoft.Identity.Client" version="4.50.0" targetFramework="net472" />
   <package id="Microsoft.Identity.Client.Extensions.Msal" version="2.26.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Abstractions" version="6.27.0" targetFramework="net472" />
@@ -45,6 +45,6 @@
   <package id="System.Text.Json" version="7.0.2" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
-  <package id="Virenbar.JANL" version="2.2.0" targetFramework="net472" />
-  <package id="Virenbar.JANL.WinForms" version="2.2.0" targetFramework="net472" />
+  <package id="Virenbar.JANL" version="2.2.1" targetFramework="net472" />
+  <package id="Virenbar.JANL.WinForms" version="2.2.1" targetFramework="net472" />
 </packages>
