--- a/FIASUpdate/App.config
+++ b/FIASUpdate/App.config
@@ -12,7 +12,7 @@
 
 	<userSettings>
 		<FIASUpdate.Properties.Settings>
-   <setting name="SQLCS" serializeAs="String">
+   <setting name="SQLConnection" serializeAs="String">
     <value>Data Source=partserver2014;Initial Catalog=master;Integrated Security=True</value>
    </setting>
    <setting name="XMLPath" serializeAs="String">
@@ -23,7 +23,8 @@
    </setting>
    <setting name="SQLConnections" serializeAs="Xml">
     <value>
-     <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+     <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xmlns:xsd="http://www.w3.org/2001/XMLSchema">
       <string>Data Source=partserver2014;Initial Catalog=master;Integrated Security=True</string>
      </ArrayOfString>
     </value>
