--- a/FIASUpdate/Properties/Settings.settings
+++ b/FIASUpdate/Properties/Settings.settings
@@ -2,7 +2,7 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="FIASUpdate.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="SQLCS" Type="System.String" Scope="User">
+    <Setting Name="SQLConnection" Type="System.String" Scope="User">
       <Value Profile="(Default)">Data Source=partserver2014;Initial Catalog=master;Integrated Security=True</Value>
     </Setting>
     <Setting Name="XMLPath" Type="System.String" Scope="User">
