--- a/FIASUpdate/App.config
+++ b/FIASUpdate/App.config
@@ -38,6 +38,9 @@
    <setting name="DefaultForeColor" serializeAs="String">
     <value>Black</value>
    </setting>
+   <setting name="Upgraded" serializeAs="String">
+    <value>False</value>
+   </setting>
   </FIASUpdate.Properties.Settings>
 	</userSettings>
 	<runtime>
