--- a/FIASUpdate/FIASUpdate.csproj
+++ b/FIASUpdate/FIASUpdate.csproj
@@ -348,6 +348,7 @@
     <Compile Include="DBCreate.cs" />
     <Compile Include="DBImport.cs" />
     <Compile Include="DBImportDelta.cs" />
+    <Compile Include="Models\ImportOptions.cs" />
     <Compile Include="Models\FIASArchiveItem.cs" />
     <Compile Include="Forms\FormAbout.cs">
       <SubType>Form</SubType>
@@ -375,6 +376,7 @@
     <Compile Include="Models\DBStringItem.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Models\FIASArchive.cs" />
+    <Compile Include="FIASProperties.cs" />
     <Compile Include="Properties\Settings.cs" />
     <Compile Include="Readers\FIASReader.cs" />
     <Compile Include="DBImportFull.cs" />
@@ -397,7 +399,7 @@
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\FIASTable.cs" />
-    <Compile Include="Models\XMLFile.cs" />
+    <Compile Include="Models\FIASFile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQL.cs" />
@@ -491,6 +493,7 @@
     <Content Include="Resources\icons8\Replace16.png" />
     <Content Include="Resources\icons8\Save16.png" />
     <Content Include="Resources\icons8\Search16.png" />
+    <Content Include="Resources\merge.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Data.SqlClient.SNI.5.0.1\build\net46\Microsoft.Data.SqlClient.SNI.targets" Condition="Exists('..\packages\Microsoft.Data.SqlClient.SNI.5.0.1\build\net46\Microsoft.Data.SqlClient.SNI.targets')" />
