--- a/FIASUpdate/App.config
+++ b/FIASUpdate/App.config
@@ -23,8 +23,7 @@
    </setting>
    <setting name="SQLConnections" serializeAs="Xml">
     <value>
-     <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+     <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
       <string>Data Source=partserver2014;Initial Catalog=master;Integrated Security=True</string>
      </ArrayOfString>
     </value>
